--- a/index.html
+++ b/index.html
@@ -3,21 +3,10 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>Social Media App — Fixed</title>
-
-  <!-- Bootstrap CSS -->
+  <title>Social Media App </title>
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/css/bootstrap.min.css" rel="stylesheet">
-  <style>
-    body { background:#f0f2f5; font-family: Inter, system-ui, Arial, sans-serif; padding-bottom:40px; }
-    .main-nav { background:#00bfff; }
-    .navbar-brand { color:#fff; font-weight:700 }
-    .post-card { display:flex; gap:1rem; padding:1rem; border-radius:10px; background:#fff; box-shadow:0 6px 12px rgba(0,0,0,0.06); margin-bottom:1rem; align-items:flex-start; }
-    .post-image { width:160px; height:120px; object-fit:cover; border-radius:8px; }
-    .post-content h3 { margin:0; font-size:1.1rem; }
-    .post-actions button { margin-right:.5rem; }
-    .post-form-container { background:#fff; padding:1rem; border-radius:10px; box-shadow:0 6px 12px rgba(0,0,0,0.06); margin-bottom:1rem; }
-    @media (max-width:576px){ .post-card{ flex-direction:column } .post-image{ width:100%; height:200px } }
-  </style>
+  
+ 
 </head>
 <body>
 
@@ -44,7 +33,6 @@
             </select>
           </div>
           <div id="authButtons" class="d-flex gap-2">
-            <!-- Separate buttons -->
             <button class="btn btn-outline-light" id="loginBtn" data-bs-toggle="modal" data-bs-target="#authModal">Login</button>
             <button class="btn btn-success" id="signupBtn" data-bs-toggle="modal" data-bs-target="#authModal">Sign Up</button>
           </div>
@@ -83,7 +71,6 @@
       </form>
     </div>
 
-    <!-- Feed & User posts -->
     <section class="row">
       <div class="col-12 col-lg-8">
         <div id="posts-container"></div>
@@ -94,8 +81,7 @@
       </div>
     </section>
   </main>
-
-  <!-- Auth Modal (Bootstrap) -->
+  
   <div class="modal fade" id="authModal" tabindex="-1" aria-hidden="true">
     <div class="modal-dialog modal-dialog-centered">
       <div class="modal-content">
@@ -109,15 +95,12 @@
             <li class="nav-item"><a id="tabLogin" class="nav-link active" href="#">Login</a></li>
             <li class="nav-item"><a id="tabSignup" class="nav-link" href="#">Sign Up</a></li>
           </ul>
-
-          <!-- Login Form -->
           <form id="loginForm">
             <div class="mb-2"><label class="form-label">Email</label><input id="loginEmail" type="email" class="form-control" required></div>
             <div class="mb-2"><label class="form-label">Password</label><input id="loginPassword" type="password" class="form-control" required></div>
             <div class="d-grid"><button class="btn btn-primary" type="submit">Login</button></div>
           </form>
 
-          <!-- Signup Form -->
           <form id="signupForm" class="d-none">
             <div class="mb-2"><label class="form-label">Name</label><input id="signupName" type="text" class="form-control" required></div>
             <div class="mb-2"><label class="form-label">Email</label><input id="signupEmail" type="email" class="form-control" required></div>
@@ -128,8 +111,6 @@
       </div>
     </div>
   </div>
-
-  <!-- Confirm Delete Modal -->
   <div class="modal fade" id="confirmModal" tabindex="-1" aria-hidden="true">
     <div class="modal-dialog modal-sm modal-dialog-centered">
       <div class="modal-content">
@@ -144,9 +125,10 @@
     </div>
   </div>
 
-  <!-- Bootstrap JS bundle -->
+ 
+</body>
+
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/js/bootstrap.bundle.min.js"></script>
 
   <script src="./app.js"></script>
-</body>
 </html>
